feat: unprocessable-entity clearly distinguished from bad-request and attributes endpoint removed
